modified perceptron example file

--- a/1_Perceptron.ipynb
+++ b/1_Perceptron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5cfe4331",
+   "id": "18e7e66c",
    "metadata": {},
    "source": [
     "# What is Perceptron?"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9bc54b7",
+   "id": "f0f0fd07",
    "metadata": {},
    "source": [
     "Perceptron is a single unit of logic in an artificial neural network. The perceptron is an algorithm which output will be a binary conclusion (true/false, 0/1 etc). It only consists of single node."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b48d70b0",
+   "id": "a0bc515b",
    "metadata": {},
    "source": [
     "## Main Components: "
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b9e1ec2",
+   "id": "3f0b3429",
    "metadata": {},
    "source": [
     "Inputs, Weights, Bias, Activation Function, Output"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e228099d",
+   "id": "1c4358de",
    "metadata": {},
    "source": [
     "![alt text](images/Perceptrons.jpeg \"Perceptron Components\")"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176a4bbc",
+   "id": "0ce7d8b8",
    "metadata": {},
    "source": [
     "# Steps:"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ff420d",
+   "id": "e52377ca",
    "metadata": {},
    "source": [
     "1. take inputs and weights.\n",
@@ -63,21 +63,21 @@
   },
   {
    "cell_type": "raw",
-   "id": "444bff6e",
+   "id": "c4ec06e4",
    "metadata": {},
    "source": [
     "Example:\n",
-    "          x1 | x2  | x3    target\n",
-    "---------------------------------\n",
-    "input :  0.1 | 0.5 | 0.2  |  1\n",
+    "          x1 | x2  | x3    target(y) | actual(y)\n",
+    "--------------------------------------------------\n",
+    "input :  0.1 | 0.5 | 0.2  |  1    |  0\n",
     "\n",
     "weight:  0.4 | 0.2 | 0.6 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "afbe972b",
+   "execution_count": 1,
+   "id": "9538fedc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f2d654b5",
+   "execution_count": 2,
+   "id": "6e8c32e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "63ea9bb6",
+   "execution_count": 3,
+   "id": "39c29ae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "66423ed0",
+   "execution_count": 4,
+   "id": "8051f8af",
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +140,6 @@
     "output = perceptron()\n",
     "print(\"output: \" + str(output))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaff56ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
