add Error function file by applying log loss or cross entropy loss function

--- a/2_Error_function.ipynb
+++ b/2_Error_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "a2e26078",
+   "id": "37a1b239",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ebce3b4e",
+   "execution_count": 53,
+   "id": "c416e51f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "entry_1 = [0.1, 0.5, 0.2]\n",
-    "entry_2 = [0.2, 0.3, 0.1]\n",
-    "entry_3 = [0.7, 0.4, 0.2]\n",
-    "entry_4 = [0.1, 0.4, 0.3]\n",
+    "neuron_1 = [0.1, 0.5, 0.2]\n",
+    "neuron_2 = [0.2, 0.3, 0.1]\n",
+    "neuron_3 = [0.7, 0.4, 0.2]\n",
+    "neuron_4 = [0.1, 0.4, 0.3]\n",
     "\n",
     "weights = [0.4, 0.2, 0.6]\n",
     "\n",
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "dc1eb8f3",
+   "execution_count": 54,
+   "id": "56ce201a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "dcd9b37d",
+   "execution_count": 55,
+   "id": "30b4c925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,22 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a2d00633",
+   "execution_count": 56,
+   "id": "070baf14",
    "metadata": {},
    "outputs": [],
    "source": [
     "neuron_list = []\n",
-    "neuron_list.append(entry_1)\n",
-    "neuron_list.append(entry_2)\n",
-    "neuron_list.append(entry_3)\n",
-    "neuron_list.append(entry_4)    "
+    "neuron_list.append(neuron_1)\n",
+    "neuron_list.append(neuron_2)\n",
+    "neuron_list.append(neuron_3)\n",
+    "neuron_list.append(neuron_4)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "98581f1c",
+   "execution_count": 57,
+   "id": "b62413b7",
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "95f5c012",
+   "execution_count": 58,
+   "id": "583384be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,26 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "9a258db0",
+   "execution_count": 59,
+   "id": "0bd68e62",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total weighted Sum: [0.26, 0.2, 0.48, 0.30000000000000004]\n"
+      "Total weighted Sum: ['0.26', '0.20', '0.48', '0.30']\n"
      ]
     }
    ],
    "source": [
+    "weighted_sum_list = [ '%.2f' % elem for elem in weighted_sum_list ]\n",
     "print(\"Total weighted Sum: \" + str(weighted_sum_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "e592544c",
+   "execution_count": 60,
+   "id": "e2a1d612",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3801433b",
+   "id": "1e7a594a",
    "metadata": {},
    "source": [
     "# Error Function"
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c3b6cef",
+   "id": "d4cc2e84",
    "metadata": {},
    "source": [
     "If the predicted result is wrong then we have to calculate the distance between actual and target output. For this, we use Error function also called Loss Function or Cost. Below, we will use Cross Entropy Loss Error Function known as Log loss."
@@ -169,16 +170,109 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78dfa7d8",
+   "id": "b42235b2",
    "metadata": {},
    "source": [
-    "# #Cross Entropy Loss / Log Loss"
+    "# Cross Entropy Loss / Log Loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abc819a3",
+   "metadata": {},
+   "source": [
+    "### Formula: −(ylog(p)+(1−y)log(1−p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "8aafe88b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "98169899",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data =[]\n",
+    "\n",
+    "for w_sum, t_val in zip(weighted_sum_list, target):\n",
+    "    input_data.append((float(w_sum), t_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b4aa6805",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.26, 1), (0.2, 0), (0.48, 1), (0.3, 0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "39cd4b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y = target value, P = weighted_sum \n",
+    "\n",
+    "def cross_entropy(input):\n",
+    "    loss = 0\n",
+    "    n = len(input)\n",
+    "    \n",
+    "    for data in input:\n",
+    "        p = data[0]\n",
+    "        y = data[1]\n",
+    "        loss += -(y * math.log10(p) + (1-y) * math.log10(1-p))\n",
+    "        print(loss)\n",
+    "    return loss/n "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5c0de6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.585026652029182\n",
+      "0.6819366650372384\n",
+      "1.000695427661651\n",
+      "1.1555973876473944\n",
+      "0.2888993469118486\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_error = cross_entropy(input_data)\n",
+    "print(\"Total Error: \"(total_error))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43cc6a6b",
+   "id": "342a99f7",
    "metadata": {},
    "outputs": [],
    "source": []
