modified error function file

--- a/2_Error_function.ipynb
+++ b/2_Error_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "37a1b239",
+   "id": "524a96f7",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c416e51f",
+   "id": "5654fcc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "56ce201a",
+   "id": "d5fd4714",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "30b4c925",
+   "id": "ed242505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "070baf14",
+   "id": "d230386b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b62413b7",
+   "id": "5ed8f6cd",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "583384be",
+   "id": "a3f53a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0bd68e62",
+   "id": "c65ac727",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e2a1d612",
+   "id": "34a43f82",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7a594a",
+   "id": "0d591a62",
    "metadata": {},
    "source": [
     "# Error Function"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4cc2e84",
+   "id": "a620c05a",
    "metadata": {},
    "source": [
     "If the predicted result is wrong then we have to calculate the distance between actual and target output. For this, we use Error function also called Loss Function or Cost. Below, we will use Cross Entropy Loss Error Function known as Log loss."
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42235b2",
+   "id": "5baf1be6",
    "metadata": {},
    "source": [
     "# Cross Entropy Loss / Log Loss"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc819a3",
+   "id": "9ab34b08",
    "metadata": {},
    "source": [
     "### Formula: −(ylog(p)+(1−y)log(1−p))"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8aafe88b",
+   "id": "2c1ffa3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "98169899",
+   "id": "e1c96eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "b4aa6805",
+   "id": "75dae480",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "39cd4b8e",
+   "id": "de6d14e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "5c0de6c6",
+   "execution_count": 80,
+   "id": "11321612",
    "metadata": {},
    "outputs": [
     {
@@ -260,19 +260,19 @@
       "0.6819366650372384\n",
       "1.000695427661651\n",
       "1.1555973876473944\n",
-      "0.2888993469118486\n"
+      "Average Error: 0.2888993469118486\n"
      ]
     }
    ],
    "source": [
-    "total_error = cross_entropy(input_data)\n",
-    "print(\"Total Error: \"(total_error))"
+    "_error = cross_entropy(input_data)\n",
+    "print(\"Average Error: \" + str(total_error))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "342a99f7",
+   "id": "a3857fcc",
    "metadata": {},
    "outputs": [],
    "source": []
