update varable names

--- a/2_Error_function.ipynb
+++ b/2_Error_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "524a96f7",
+   "id": "5a100044",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -19,14 +19,14 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5654fcc5",
+   "id": "e924fc76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "neuron_1 = [0.1, 0.5, 0.2]\n",
-    "neuron_2 = [0.2, 0.3, 0.1]\n",
-    "neuron_3 = [0.7, 0.4, 0.2]\n",
-    "neuron_4 = [0.1, 0.4, 0.3]\n",
+    "feature_1 = [0.1, 0.5, 0.2]\n",
+    "feature_2 = [0.2, 0.3, 0.1]\n",
+    "feature_3 = [0.7, 0.4, 0.2]\n",
+    "feature_4 = [0.1, 0.4, 0.3]\n",
     "\n",
     "weights = [0.4, 0.2, 0.6]\n",
     "\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d5fd4714",
+   "id": "a4673aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ed242505",
+   "id": "da03c44d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,21 +73,21 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d230386b",
+   "id": "7a18c34b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "neuron_list = []\n",
-    "neuron_list.append(neuron_1)\n",
-    "neuron_list.append(neuron_2)\n",
-    "neuron_list.append(neuron_3)\n",
-    "neuron_list.append(neuron_4)    "
+    "feature_list = []\n",
+    "feature_list.append(feature_1)\n",
+    "feature_list.append(feature_2)\n",
+    "feature_list.append(feature_3)\n",
+    "feature_list.append(feature_4)    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5ed8f6cd",
+   "id": "8080945e",
    "metadata": {},
    "outputs": [
     {
@@ -99,24 +99,24 @@
     }
    ],
    "source": [
-    "print(neuron_list)"
+    "print(feature_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a3f53a17",
+   "id": "20f2d87c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(neuron_list)):\n",
-    "    perceptron(neuron_list[i], weights)"
+    "for i in range(len(feature_list)):\n",
+    "    perceptron(feature_list[i], weights)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c65ac727",
+   "id": "e542160c",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "34a43f82",
+   "id": "4af7b3f0",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d591a62",
+   "id": "06b4e614",
    "metadata": {},
    "source": [
     "# Error Function"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a620c05a",
+   "id": "42f7f4eb",
    "metadata": {},
    "source": [
     "If the predicted result is wrong then we have to calculate the distance between actual and target output. For this, we use Error function also called Loss Function or Cost. Below, we will use Cross Entropy Loss Error Function known as Log loss."
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5baf1be6",
+   "id": "fd2e37d6",
    "metadata": {},
    "source": [
     "# Cross Entropy Loss / Log Loss"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab34b08",
+   "id": "57afdcac",
    "metadata": {},
    "source": [
     "### Formula: −(ylog(p)+(1−y)log(1−p))"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2c1ffa3c",
+   "id": "252d2c36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e1c96eeb",
+   "id": "226d2857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "75dae480",
+   "id": "9b922db7",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "de6d14e5",
+   "id": "b0b12324",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "11321612",
+   "execution_count": 81,
+   "id": "007e9d55",
    "metadata": {},
    "outputs": [
     {
@@ -265,14 +265,14 @@
     }
    ],
    "source": [
-    "_error = cross_entropy(input_data)\n",
-    "print(\"Average Error: \" + str(total_error))"
+    "average_error = cross_entropy(input_data)\n",
+    "print(\"Average Error: \" + str(average_error))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3857fcc",
+   "id": "612eda93",
    "metadata": {},
    "outputs": [],
    "source": []
