updated prediction function

--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3ca0c2e",
+   "id": "8c213ac8",
    "metadata": {},
    "source": [
     "step:\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba007bc0",
+   "id": "7bef58ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "32d8bb61",
+   "id": "bd7fa342",
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "4e6c7aa4",
+   "execution_count": 86,
+   "id": "8da63ff2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,20 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "296bbc75",
+   "execution_count": 87,
+   "id": "2eee3833",
    "metadata": {},
    "outputs": [],
    "source": [
     "def perceptron(feature, weights, bias):    \n",
     "    weighted_sum = np.dot(feature, weights)    \n",
-    "    return weighted_sum + bias"
+    "    return sigmoid(weighted_sum + bias)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "d910a370",
+   "execution_count": 88,
+   "id": "72607a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,30 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "bac8789f",
+   "execution_count": 89,
+   "id": "129f7b87",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_predicted(features, weights, bias):\n",
-    "    weighted_sum_list = perceptron(features, weights, bias)\n",
-    "    pred=[]\n",
-    "    for i in weighted_sum_list:\n",
-    "        pred.append(sigmoid(i)) \n",
-    "    return pred"
+    "    predicted_values = perceptron(features, weights, bias)\n",
+    "    return predicted_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "77a0b1cb",
+   "execution_count": 90,
+   "id": "b05292c6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.6813537337890256, 0.6681877721681662]\n"
+      "[0.68135373 0.66818777]\n"
      ]
     }
    ],
@@ -114,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12ebc0ea",
+   "id": "99da45b6",
    "metadata": {},
    "outputs": [],
    "source": []
