update methods name and add loss function for error calculation

--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "8c213ac8",
+   "cell_type": "raw",
+   "id": "10398714",
    "metadata": {},
    "source": [
     "step:\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7bef58ce",
+   "id": "b846c6f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "bd7fa342",
+   "execution_count": 2,
+   "id": "da65c869",
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "8da63ff2",
+   "execution_count": 3,
+   "id": "0faad0a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,20 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "2eee3833",
+   "execution_count": null,
+   "id": "67d55aeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def perceptron(feature, weights, bias):    \n",
-    "    weighted_sum = np.dot(feature, weights)    \n",
-    "    return sigmoid(weighted_sum + bias)"
+    "def perceptr(feature, weight, bias):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "72607a17",
+   "execution_count": 5,
+   "id": "84d26953",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,39 +77,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "129f7b87",
+   "execution_count": 6,
+   "id": "a9834d0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_predicted(features, weights, bias):\n",
-    "    predicted_values = perceptron(features, weights, bias)\n",
-    "    return predicted_values"
+    "def get_prediction(feature, weight, bias):\n",
+    "    weighted_sum = np.dot(feature, weight)    \n",
+    "    #return sigmoid(weighted_sum + bias)\n",
+    "    return weighted_sum + bias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "b05292c6",
+   "execution_count": 7,
+   "id": "487ec60b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Loss calculation\n",
+    "def cross_entropy(p, y):\n",
+    "    return -(y*np.log10(p) + (1 - y) * (np.log10(1 - p)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "369c3e28",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.68135373 0.66818777]\n"
+      "Weighted_sum: 0.76\n",
+      "Predicted value:  0.6813537337890256\n",
+      "Loss:  0.49669116606994884\n",
+      "Weighted_sum: 0.7\n",
+      "Predicted value:  0.6681877721681662\n",
+      "Loss:  0.17510147621132907\n"
      ]
     }
    ],
    "source": [
-    "result = get_predicted(features, weights, bias)\n",
-    "print(result)"
+    "# Create Neural Network Model\n",
+    "for f_input, target  in zip(features, targets):\n",
+    "    \n",
+    "    weighted_sum = get_prediction(f_input, weights, bias)\n",
+    "    print(\"Weighted_sum:\", weighted_sum)\n",
+    "    \n",
+    "    predicted_value = sigmoid(weighted_sum)\n",
+    "    print(\"Predicted value: \", predicted_value)\n",
+    "    \n",
+    "    print(\"Loss: \", cross_entropy(predicted_value, target)) \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99da45b6",
+   "id": "3011b3e8",
    "metadata": {},
    "outputs": [],
    "source": []
