add gradient descent example file

--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "10398714",
+   "id": "5be24c09",
    "metadata": {},
    "source": [
     "step:\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b846c6f0",
+   "id": "76673705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da65c869",
+   "id": "17cb5e45",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0faad0a6",
+   "id": "0a10f276",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "67d55aeb",
+   "execution_count": 4,
+   "id": "609adff9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def perceptr(feature, weight, bias):"
+    "def perceptron(feature, weight, bias):\n",
+    "    weighted_sum = np.dot(feature, weight)    \n",
+    "    #return sigmoid(weighted_sum + bias)\n",
+    "    return weighted_sum + bias"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "84d26953",
+   "id": "fc652ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a9834d0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_prediction(feature, weight, bias):\n",
-    "    weighted_sum = np.dot(feature, weight)    \n",
-    "    #return sigmoid(weighted_sum + bias)\n",
-    "    return weighted_sum + bias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "487ec60b",
+   "id": "cfb76e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,20 +92,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "369c3e28",
+   "execution_count": 9,
+   "id": "96425f99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apply gradient descent to update weights and bias value\n",
+    "\n",
+    "def gradient_descent(feature, weights, bias, target, predict_val, learning_rate):\n",
+    "    new_weights = []\n",
+    "    # update bias\n",
+    "    #formula: new_bias = old_bias + learning_rate x (target - predict) \n",
+    "    bias = bias + learning_rate * (target - predict_val)\n",
+    "    \n",
+    "    #update weights\n",
+    "    #formula: new_w = old_w + learning_rate x (target - predict) x feature[i]\n",
+    "    for x, old_w in zip(feature, weights):\n",
+    "        new_w = old_w + learning_rate * (target - predict_val) * x\n",
+    "        new_weights.append(new_w)\n",
+    "    \n",
+    "    return new_weights, bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9df9267e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weighted_sum: 0.76\n",
-      "Predicted value:  0.6813537337890256\n",
-      "Loss:  0.49669116606994884\n",
-      "Weighted_sum: 0.7\n",
-      "Predicted value:  0.6681877721681662\n",
-      "Loss:  0.17510147621132907\n"
+      "Weighted_sum: 0.6685781382703873\n",
+      "Predicted value:  0.6611847075005033\n",
+      "Loss:  0.47003699592615333\n",
+      "Updated weight : [0.3940477782369944, 0.1205949950502744, 0.5668196009876899], Update bias : 0.3695579307489472\n",
+      "---------------------------\n",
+      "Weighted_sum: 0.5412279450101974\n",
+      "Predicted value:  0.6320980227780688\n",
+      "Loss:  0.19921556815652344\n",
+      "Updated weight : [0.401405817781433, 0.13163205436693234, 0.5704986207599092], Update bias : 0.4063481284711403\n",
+      "---------------------------\n"
      ]
     }
    ],
@@ -123,20 +141,25 @@
     "# Create Neural Network Model\n",
     "for f_input, target  in zip(features, targets):\n",
     "    \n",
-    "    weighted_sum = get_prediction(f_input, weights, bias)\n",
+    "    weighted_sum = perceptron(f_input, weights, bias)\n",
     "    print(\"Weighted_sum:\", weighted_sum)\n",
     "    \n",
     "    predicted_value = sigmoid(weighted_sum)\n",
     "    print(\"Predicted value: \", predicted_value)\n",
     "    \n",
     "    print(\"Loss: \", cross_entropy(predicted_value, target)) \n",
+    "    \n",
+    "    weights, bias = gradient_descent(f_input, weights, bias, target, predicted_value, learning_rate)\n",
+    "    print(\"Updated weight : {}, Update bias : {}\".format(weights, bias))\n",
+    "    \n",
+    "    print(\"---------------------------\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3011b3e8",
+   "id": "31a4c88c",
    "metadata": {},
    "outputs": [],
    "source": []
