--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "5be24c09",
+   "id": "1ff90bbd",
    "metadata": {},
    "source": [
     "step:\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76673705",
+   "id": "51cb85cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17cb5e45",
+   "id": "278cc719",
    "metadata": {},
    "outputs": [
     {
@@ -32,24 +32,29 @@
      "output_type": "stream",
      "text": [
       "[[0.1 0.5 0.2]\n",
-      " [0.2 0.3 0.1]]\n"
+      " [0.2 0.3 0.1]\n",
+      " [0.7 0.4 0.2]\n",
+      " [0.1 0.4 0.3]]\n"
      ]
     }
    ],
    "source": [
-    "features = np.array(([0.1, 0.5, 0.2], [0.2,0.3,0.1]))\n",
+    "features = np.array(([0.1, 0.5, 0.2], \n",
+    "                     [0.2, 0.3, 0.1], \n",
+    "                     [0.7, 0.4, 0.2], \n",
+    "                     [0.1, 0.4, 0.3]))\n",
     "print(features)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a10f276",
+   "id": "782e6b1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "weights = np.array([0.4, 0.2, 0.6])\n",
-    "targets = np.array([0,1])\n",
+    "targets = np.array([1,0,1,0])\n",
     "bias = 0.5\n",
     "learning_rate = 0.1"
    ]
@@ -57,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "609adff9",
+   "id": "e3d2c90f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fc652ba1",
+   "id": "e2f9a435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cfb76e41",
+   "id": "757220c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "96425f99",
+   "execution_count": 7,
+   "id": "ac391557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,50 +121,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9df9267e",
+   "execution_count": 15,
+   "id": "107809fa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weighted_sum: 0.6685781382703873\n",
-      "Predicted value:  0.6611847075005033\n",
-      "Loss:  0.47003699592615333\n",
-      "Updated weight : [0.3940477782369944, 0.1205949950502744, 0.5668196009876899], Update bias : 0.3695579307489472\n",
-      "---------------------------\n",
-      "Weighted_sum: 0.5412279450101974\n",
-      "Predicted value:  0.6320980227780688\n",
-      "Loss:  0.19921556815652344\n",
-      "Updated weight : [0.401405817781433, 0.13163205436693234, 0.5704986207599092], Update bias : 0.4063481284711403\n",
-      "---------------------------\n"
+      "***************************************************\n",
+      "EPOCH  0\n",
+      "***************************************************\n",
+      "Average Loss:  0.0051986730051324466\n",
+      "***************************************************\n",
+      "EPOCH  1\n",
+      "***************************************************\n",
+      "Average Loss:  0.005198580748211423\n",
+      "***************************************************\n",
+      "EPOCH  2\n",
+      "***************************************************\n",
+      "Average Loss:  0.005198488494539181\n",
+      "***************************************************\n",
+      "EPOCH  3\n",
+      "***************************************************\n",
+      "Average Loss:  0.005198396244115545\n",
+      "***************************************************\n",
+      "EPOCH  4\n",
+      "***************************************************\n",
+      "Average Loss:  0.0051983039969403285\n",
+      "***************************************************\n",
+      "EPOCH  5\n",
+      "***************************************************\n",
+      "Average Loss:  0.00519821175301337\n",
+      "***************************************************\n",
+      "EPOCH  6\n",
+      "***************************************************\n",
+      "Average Loss:  0.005198119512334531\n",
+      "***************************************************\n",
+      "EPOCH  7\n",
+      "***************************************************\n",
+      "Average Loss:  0.005198027274903639\n",
+      "***************************************************\n",
+      "EPOCH  8\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197935040720468\n",
+      "***************************************************\n",
+      "EPOCH  9\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197842809784868\n",
+      "***************************************************\n",
+      "EPOCH  10\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197750582096678\n",
+      "***************************************************\n",
+      "EPOCH  11\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197658357655797\n",
+      "***************************************************\n",
+      "EPOCH  12\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197566136461903\n",
+      "***************************************************\n",
+      "EPOCH  13\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197473918514958\n",
+      "***************************************************\n",
+      "EPOCH  14\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197381703814736\n",
+      "***************************************************\n",
+      "EPOCH  15\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197289492361027\n",
+      "***************************************************\n",
+      "EPOCH  16\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197197284153765\n",
+      "***************************************************\n",
+      "EPOCH  17\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197105079192705\n",
+      "***************************************************\n",
+      "EPOCH  18\n",
+      "***************************************************\n",
+      "Average Loss:  0.005197012877477708\n",
+      "***************************************************\n",
+      "EPOCH  19\n",
+      "***************************************************\n",
+      "Average Loss:  0.005196920679008562\n"
      ]
     }
    ],
    "source": [
-    "# Create Neural Network Model\n",
-    "for f_input, target  in zip(features, targets):\n",
+    "#Gradient Descent steps over 10 epoch\n",
+    "for epoch in range(20):\n",
     "    \n",
-    "    weighted_sum = perceptron(f_input, weights, bias)\n",
-    "    print(\"Weighted_sum:\", weighted_sum)\n",
+    "    # Create Neural Network Model\n",
+    "    for f_input, target  in zip(features, targets):\n",
+    "        \n",
+    "        #print(\"---------------------------\")\n",
+    "        weighted_sum = perceptron(f_input, weights, bias)\n",
+    "        #print(\"Weighted_sum:\", weighted_sum)\n",
+    "\n",
+    "        predicted_value = sigmoid(weighted_sum)\n",
+    "        #print(\"Predicted value: \", predicted_value)\n",
+    "\n",
+    "        #print(\"Loss: \", cross_entropy(predicted_value, target)) \n",
+    "\n",
+    "        weights, bias = gradient_descent(f_input, weights, bias, target, predicted_value, learning_rate)\n",
+    "        #print(\"Updated weight : {}, Update bias : {}\".format(weights, bias))\n",
+    "        #print(\"---------------------------\")\n",
     "    \n",
-    "    predicted_value = sigmoid(weighted_sum)\n",
-    "    print(\"Predicted value: \", predicted_value)\n",
+    "    # Calculate and print average loss\n",
+    "    predictions = sigmoid(perceptron(features, weights, bias))\n",
+    "    average_loss = np.mean(cross_entropy(predictions, targets))\n",
     "    \n",
-    "    print(\"Loss: \", cross_entropy(predicted_value, target)) \n",
-    "    \n",
-    "    weights, bias = gradient_descent(f_input, weights, bias, target, predicted_value, learning_rate)\n",
-    "    print(\"Updated weight : {}, Update bias : {}\".format(weights, bias))\n",
-    "    \n",
-    "    print(\"---------------------------\")\n",
-    "    "
+    "    print(\"***************************************************\")\n",
+    "    print(\"EPOCH \", epoch)\n",
+    "    print(\"***************************************************\")\n",
+    "    print(\"Average Loss: \", average_loss)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a4c88c",
+   "id": "60c6da83",
    "metadata": {},
    "outputs": [],
    "source": []
